tty-manifests/tty-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: tty-${SUB}-${TARGET_TEAM}
  name: tty-${SUB}-${TARGET_TEAM}
  namespace: team-admin
spec:
  serviceAccountName: tty-${SUB}-${TARGET_TEAM}
  volumes:
    - name: kconfig
      configMap:
        name: kconfig
  containers:
    - image: ani509/otomi-ttyd
      name: po
      resources:
        requests:
          memory: '128Mi'
          cpu: '250m'
        limits:
          memory: '256Mi'
          cpu: '500m'
      volumeMounts:
        - name: kconfig
          mountPath: /etc/kconfig
      command:
        - su
        - '-'
        - user
        - -c
        - sh /etc/kconfig/kconfig.sh && ttyd -w /home/user -m 1 -u 1000 -g 1000 -p 8080 sh
---
