tty-manifests/tty-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tty
  name: tty
  namespace: team-${TEAM}
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tty
  type: ClusterIP
---
